drivers/gpu/drm/amd/amdgpu/amdgpu_uvd.c
@@ -305,8 +305,9 @@ int amdgpu_uvd_suspend(struct amdgpu_device *adev)
 			if (atomic_read(&adev->uvd.handles[i]))
 				break;
 
-	if (i == adev->uvd.max_handles)
-		return 0;
+		if (i == adev->uvd.max_handles)
+			return 0;
+	}
 
 	size = amdgpu_bo_size(adev->uvd.vcpu_bo);
 	ptr = adev->uvd.cpu_addr;
